# VGraphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.c  main.cpp
Plugins/OGL_P/: CMakelists.txt  IOGL.c  IOGL.h
VG/: CMakeLists.txt
VG/inc/: VG.h
VG/plugs/OGL_P/: CMakelists.txt
VG/src/: VG.c
VG/src/VUtils/: cnew.h  vnew.h
VGraphics/: CMakeLists.txt
VGraphics/VGraphics/: CMakeLists.txt  VGraphics.cpp  VGraphics.hpp  VGraphicsResourceChief.cpp  VGraphicsResourceChief.hpp
VGraphics/VGraphics/DX/11/: DX11.cpp  private.cpp
VGraphics/VWindow/: CMakeLists.txt  VWindow.cpp
VGraphics/VWindow/MS/: Window.cpp
VGraphics/testMain/: testMain.cpp
ven/glad/: CMakeLists.txt
ven/glad/include/glad/: glad.h
ven/glad/src/: glad.c
